package edu.fiuba.algo3.modelo;

public interface Superficie {
    
    public int danio(Danio danio);
    public boolean puedeVolar();
}
